--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore 20/MaxAndMin/MaxAndMin.csproj
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build 20/MaxAndMin/MaxAndMin.csproj --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
