--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Build
       run: dotnet build 20/MaxAndMin/MaxAndMin.csproj --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test 20/Tests/Tests.csproj --no-build --verbosity normal
